--- a/src/app/add-car/add-car.component.html
+++ b/src/app/add-car/add-car.component.html
@@ -1,4 +1,5 @@
-<!--write a form to add a car-->
+<button class="btn btn-primary rounded-circle" (click)="goBack()"><<<</button>
+<h1>Add Car</h1>
 <form (submit)="addCar()">
   <div class="form-group">
     <label for="name">Name</label>
