--- a/src/app/cars/cars.component.html
+++ b/src/app/cars/cars.component.html
@@ -4,7 +4,7 @@
     <button routerLink="/newcar" class="rounded-circle">Add Car + </button>
   </div>
 <div class="d-flex">
-  <input type="text" class="form-control rounded-pill" (keyup)="searchCars()" [(ngModel)]="search">
+  <input type="text" placeholder="Search" class="form-control rounded-pill" (keyup)="searchCars()" [(ngModel)]="search">
 </div>
 <h2 *ngIf='cars.length == 0'>there is no cars at the moment, please check back later!</h2>
 <table class="table bg-secondary" *ngIf='cars.length > 0' >
